feat: improve public policy RAG retrieval quality