@@ -4,10 +4,12 @@ import com.example.ragtest.common.exception.BusinessException;
 import com.example.ragtest.external.client.CentralWelfareApiClient;
 import com.example.ragtest.external.client.LocalWelfareApiClient;
 import com.example.ragtest.external.client.PublicServiceApiClient;
+import com.example.ragtest.external.client.YouthCenterApiClient;
 import com.example.ragtest.external.dto.ExternalPolicyRecord;
 import com.example.ragtest.external.normalizer.CentralWelfareNormalizer;
 import com.example.ragtest.external.normalizer.LocalWelfareNormalizer;
 import com.example.ragtest.external.normalizer.PublicServiceNormalizer;
+import com.example.ragtest.external.normalizer.YouthPolicyNormalizer;
 import com.example.ragtest.policy.domain.Policy;
 import com.example.ragtest.policy.domain.PolicyRawPayload;
 import com.example.ragtest.policy.filter.YouthPolicyFilter;
@@ -34,14 +36,23 @@ import java.util.function.Function;
 @Service
 public class ExternalPolicyIngestService {
 
-    private static final List<String> PUBLIC_SERVICE_KEYWORDS = List.of("청년", "취업", "구직", "주거", "월세", "자산", "창업");
+    private static final List<String> PUBLIC_SERVICE_KEYWORDS = List.of(
+            "청년", "청소년", "학생", "대학생", "대학원생", "재학생", "휴학생", "졸업생",
+            "학자금", "장학금", "등록금", "대출이자", "국가장학금", "주거", "월세", "전세",
+            "임대", "행복주택", "청년주택", "교통비", "기본소득", "면접수당", "취업", "구직",
+            "일자리", "일경험", "인턴", "직무훈련", "직업훈련", "창업", "예비창업", "스타트업",
+            "자산", "금융", "저축", "적금", "도약계좌", "내일저축", "햇살론", "문화", "복지",
+            "건강", "상담", "신혼부부", "사회초년생", "자립준비청년"
+    );
 
     private final PublicServiceApiClient publicServiceApiClient;
     private final LocalWelfareApiClient localWelfareApiClient;
     private final CentralWelfareApiClient centralWelfareApiClient;
+    private final YouthCenterApiClient youthCenterApiClient;
     private final PublicServiceNormalizer publicServiceNormalizer;
     private final LocalWelfareNormalizer localWelfareNormalizer;
     private final CentralWelfareNormalizer centralWelfareNormalizer;
+    private final YouthPolicyNormalizer youthPolicyNormalizer;
     private final PolicyRepository policyRepository;
     private final PolicyRawPayloadRepository rawPayloadRepository;
     private final YouthPolicyFilter youthPolicyFilter;
@@ -51,9 +62,11 @@ public class ExternalPolicyIngestService {
             PublicServiceApiClient publicServiceApiClient,
             LocalWelfareApiClient localWelfareApiClient,
             CentralWelfareApiClient centralWelfareApiClient,
+            YouthCenterApiClient youthCenterApiClient,
             PublicServiceNormalizer publicServiceNormalizer,
             LocalWelfareNormalizer localWelfareNormalizer,
             CentralWelfareNormalizer centralWelfareNormalizer,
+            YouthPolicyNormalizer youthPolicyNormalizer,
             PolicyRepository policyRepository,
             PolicyRawPayloadRepository rawPayloadRepository,
             YouthPolicyFilter youthPolicyFilter
@@ -61,9 +74,11 @@ public class ExternalPolicyIngestService {
         this.publicServiceApiClient = publicServiceApiClient;
         this.localWelfareApiClient = localWelfareApiClient;
         this.centralWelfareApiClient = centralWelfareApiClient;
+        this.youthCenterApiClient = youthCenterApiClient;
         this.publicServiceNormalizer = publicServiceNormalizer;
         this.localWelfareNormalizer = localWelfareNormalizer;
         this.centralWelfareNormalizer = centralWelfareNormalizer;
+        this.youthPolicyNormalizer = youthPolicyNormalizer;
         this.policyRepository = policyRepository;
         this.rawPayloadRepository = rawPayloadRepository;
         this.youthPolicyFilter = youthPolicyFilter;
@@ -78,29 +93,37 @@ public class ExternalPolicyIngestService {
     public IngestResult ingestPublicYouthServices(IngestOptions options) {
         Counter counter = new Counter();
         Set<String> seenIds = new HashSet<>();
+        int keywordBudget = Math.max(1, options.maxItems() * 4 / 5);
         for (String keyword : PUBLIC_SERVICE_KEYWORDS) {
-            for (int page = 1; page <= options.maxPages() && counter.fetched < options.maxItems(); page++) {
-                JsonNode response = publicServiceApiClient.fetchList(page, options.pageSize(), keyword);
-                List<JsonNode> listItems = items(response);
-                if (listItems.isEmpty()) {
-                    break;
-                }
-                for (JsonNode item : listItems) {
-                    if (counter.fetched >= options.maxItems()) {
-                        break;
-                    }
-                    ExternalPolicyRecord listRecord = publicServiceNormalizer.normalizeToRecord(item);
-                    if (!hasRequiredListFields(listRecord) || !seenIds.add(listRecord.externalId())) {
-                        counter.skipped++;
-                        continue;
-                    }
-                    counter.fetched++;
-                    JsonNode merged = mergeWithDetail(item, listRecord.externalId(), publicServiceApiClient::fetchDetail);
-                    saveRecord(publicServiceNormalizer.normalizeToRecord(merged), counter);
-                }
+            for (int page = 1; page <= options.maxPages() && counter.fetched < keywordBudget; page++) {
+                if (!collectPublicPage(publicServiceApiClient.fetchList(page, options.pageSize(), keyword),
+                        keywordBudget, seenIds, counter)) break;
             }
+            if (counter.fetched >= keywordBudget) break;
+        }
+
+        // 키워드 검색에서 누락되는 항목을 보완한다. 중복 externalId는 저장하지 않는다.
+        for (int page = 1; page <= options.maxPages() && counter.fetched < options.maxItems(); page++) {
+            if (!collectPublicPage(publicServiceApiClient.fetchList(page, options.pageSize()),
+                    options.maxItems(), seenIds, counter)) break;
         }
         return counter.toResult();
+    }
+
+    private boolean collectPublicPage(JsonNode response, int limit, Set<String> seenIds, Counter counter) {
+        List<JsonNode> pageItems = items(response);
+        for (JsonNode item : pageItems) {
+            if (counter.fetched >= limit) break;
+            ExternalPolicyRecord listRecord = publicServiceNormalizer.normalizeToRecord(item);
+            if (!hasRequiredListFields(listRecord) || !seenIds.add(listRecord.externalId())) {
+                counter.skipped++;
+                continue;
+            }
+            counter.fetched++;
+            JsonNode merged = mergeWithDetail(item, listRecord.externalId(), publicServiceApiClient::fetchDetail);
+            saveRecord(publicServiceNormalizer.normalizeToRecord(merged), counter);
+        }
+        return !pageItems.isEmpty();
     }
 
     @Transactional
@@ -111,15 +134,11 @@ public class ExternalPolicyIngestService {
     @Transactional
     public IngestResult ingestLocalWelfareServices(IngestOptions options) {
         try {
-            return ingestPagedItems(
-                    page -> localWelfareApiClient.fetchList(page, options.pageSize()),
-                    localWelfareApiClient::fetchDetail,
-                    localWelfareNormalizer::normalizeToRecord,
-                    options
-            );
+            return ingestPagedItems(page -> localWelfareApiClient.fetchList(page, options.pageSize()),
+                    localWelfareApiClient::fetchDetail, localWelfareNormalizer::normalizeToRecord, options);
         } catch (RestClientResponseException exception) {
             throw new BusinessException("지자체복지서비스 API 호출 실패: HTTP " + exception.getStatusCode().value()
-                    + ". 공공데이터포털에서 해당 API 활용신청/승인 여부를 확인해주세요.");
+                    + ". 공공데이터포털 활용신청과 승인 상태를 확인해주세요.");
         }
     }
 
@@ -131,36 +150,46 @@ public class ExternalPolicyIngestService {
     @Transactional
     public IngestResult ingestCentralWelfareServices(IngestOptions options) {
         try {
-            return ingestPagedItems(
-                    page -> centralWelfareApiClient.fetchList(page, options.pageSize()),
-                    centralWelfareApiClient::fetchDetail,
-                    centralWelfareNormalizer::normalizeToRecord,
-                    options
-            );
+            return ingestPagedItems(page -> centralWelfareApiClient.fetchList(page, options.pageSize()),
+                    centralWelfareApiClient::fetchDetail, centralWelfareNormalizer::normalizeToRecord, options);
         } catch (RestClientResponseException exception) {
             throw new BusinessException("중앙부처복지서비스 API 호출 실패: HTTP " + exception.getStatusCode().value()
-                    + ". 공공데이터포털에서 해당 API 활용신청/승인 여부를 확인해주세요.");
+                    + ". 공공데이터포털 활용신청과 승인 상태를 확인해주세요.");
         }
     }
 
-    private IngestResult ingestPagedItems(
-            Function<Integer, JsonNode> listFetcher,
-            Function<String, JsonNode> detailFetcher,
-            RecordNormalizer normalizer,
-            IngestOptions options
-    ) {
+    @Transactional
+    public IngestResult ingestYouthCenterPolicies(IngestOptions options) {
         Counter counter = new Counter();
         Set<String> seenIds = new HashSet<>();
         for (int page = 1; page <= options.maxPages() && counter.fetched < options.maxItems(); page++) {
-            JsonNode response = listFetcher.apply(page);
-            List<JsonNode> listItems = items(response);
-            if (listItems.isEmpty()) {
-                break;
-            }
+            List<JsonNode> listItems = items(youthCenterApiClient.fetchList(page, options.pageSize()));
+            if (listItems.isEmpty()) break;
             for (JsonNode item : listItems) {
-                if (counter.fetched >= options.maxItems()) {
-                    break;
+                if (counter.fetched >= options.maxItems()) break;
+                ExternalPolicyRecord record = youthPolicyNormalizer.normalizeToRecord(item);
+                if (!hasRequiredListFields(record) || !seenIds.add(record.externalId())) {
+                    counter.skipped++;
+                    continue;
                 }
+                counter.fetched++;
+                saveRecord(record, counter);
+            }
+        }
+        return counter.toResult();
+    }
+
+    private IngestResult ingestPagedItems(Function<Integer, JsonNode> listFetcher,
+                                           Function<String, JsonNode> detailFetcher,
+                                           RecordNormalizer normalizer,
+                                           IngestOptions options) {
+        Counter counter = new Counter();
+        Set<String> seenIds = new HashSet<>();
+        for (int page = 1; page <= options.maxPages() && counter.fetched < options.maxItems(); page++) {
+            List<JsonNode> listItems = items(listFetcher.apply(page));
+            if (listItems.isEmpty()) break;
+            for (JsonNode item : listItems) {
+                if (counter.fetched >= options.maxItems()) break;
                 ExternalPolicyRecord listRecord = normalizer.normalize(item);
                 if (!hasRequiredListFields(listRecord) || !seenIds.add(listRecord.externalId())) {
                     counter.skipped++;
@@ -176,20 +205,13 @@ public class ExternalPolicyIngestService {
 
     private JsonNode mergeWithDetail(JsonNode listItem, String externalId, Function<String, JsonNode> detailFetcher) {
         ObjectNode merged = objectMapper.createObjectNode();
-        if (listItem != null && listItem.isObject()) {
-            merged.setAll((ObjectNode) listItem);
-        } else if (listItem != null) {
-            merged.set("_listPayload", listItem);
-        }
-
+        if (listItem != null && listItem.isObject()) merged.setAll((ObjectNode) listItem);
+        else if (listItem != null) merged.set("_listPayload", listItem);
         try {
             JsonNode detailResponse = detailFetcher.apply(externalId);
             JsonNode detailItem = firstItem(detailResponse);
-            if (detailItem != null && detailItem.isObject()) {
-                merged.setAll((ObjectNode) detailItem);
-            } else if (detailItem != null) {
-                merged.set("_detailPayload", detailItem);
-            }
+            if (detailItem != null && detailItem.isObject()) merged.setAll((ObjectNode) detailItem);
+            else if (detailItem != null) merged.set("_detailPayload", detailItem);
             merged.set("_rawDetailResponse", detailResponse);
         } catch (Exception exception) {
             merged.put("_detailFetchError", exception.getMessage());
@@ -202,36 +224,20 @@ public class ExternalPolicyIngestService {
             counter.skipped++;
             return;
         }
-        boolean youthRelated = upsert(record);
-        if (youthRelated) {
-            counter.saved++;
-        } else {
-            counter.skipped++;
-        }
+        if (upsert(record)) counter.saved++;
+        else counter.skipped++;
     }
 
     private boolean upsert(ExternalPolicyRecord record) {
         String hash = hash(record.rawPayload());
         Policy policy = policyRepository.findBySourceTypeAndExternalId(record.sourceType(), record.externalId())
                 .orElseGet(() -> Policy.create(record.sourceType(), record.externalId(), record.title()));
-        policy.updateFrom(
-                record.title(),
-                record.summary(),
-                record.supportTarget(),
-                record.selectionCriteria(),
-                record.applicationMethod(),
-                record.applicationStartDate(),
-                record.applicationEndDate(),
-                record.regionName(),
-                record.categoryName(),
-                record.officialUrl(),
-                hash
-        );
+        policy.updateFrom(record.title(), record.summary(), record.supportTarget(), record.selectionCriteria(),
+                record.applicationMethod(), record.applicationStartDate(), record.applicationEndDate(),
+                record.regionName(), record.categoryName(), record.officialUrl(), hash);
         boolean youthRelated = youthPolicyFilter.isYouthRelated(policy);
         policy.updateYouthRelated(youthRelated);
-        if (youthRelated) {
-            policy.markUnindexed();
-        }
+        if (youthRelated) policy.markUnindexed();
         Policy saved = policyRepository.save(policy);
         rawPayloadRepository.save(PolicyRawPayload.create(saved, record.sourceType(), record.externalId(), record.rawPayload()));
         return youthRelated;
@@ -239,44 +245,38 @@ public class ExternalPolicyIngestService {
 
     private JsonNode firstItem(JsonNode response) {
         List<JsonNode> found = items(response);
-        return found.isEmpty() ? response : found.get(0);
+        return found.isEmpty() ? response : found.getFirst();
     }
 
     static List<JsonNode> items(JsonNode response) {
-        List<JsonNode> items = new ArrayList<>();
-        collectItems(response, items);
-        return items;
+        List<JsonNode> found = new ArrayList<>();
+        collectItems(response, found);
+        return found;
     }
 
-    private static void collectItems(JsonNode node, List<JsonNode> items) {
-        if (node == null || node.isNull()) {
-            return;
-        }
+    private static void collectItems(JsonNode node, List<JsonNode> found) {
+        if (node == null || node.isNull()) return;
         if (node.isArray()) {
-            node.forEach(child -> collectItems(child, items));
+            node.forEach(child -> collectItems(child, found));
             return;
         }
         if (isPolicyItem(node)) {
-            items.add(node);
+            found.add(node);
             return;
         }
-        if (node.isObject()) {
-            node.properties().forEach(entry -> collectItems(entry.getValue(), items));
-        }
+        if (node.isObject()) node.properties().forEach(entry -> collectItems(entry.getValue(), found));
     }
 
     private static boolean isPolicyItem(JsonNode node) {
         return node.isObject()
-                && hasAnyText(node, "서비스ID", "serviceId", "servId", "id")
-                && hasAnyText(node, "서비스명", "serviceName", "servNm", "title");
+                && hasAnyText(node, "서비스ID", "serviceId", "servId", "plcyNo", "bizId", "policyId", "id")
+                && hasAnyText(node, "서비스명", "serviceName", "servNm", "plcyNm", "polyBizSjnm", "policyName", "title");
     }
 
     private static boolean hasAnyText(JsonNode node, String... fieldNames) {
         for (String fieldName : fieldNames) {
             JsonNode value = node.get(fieldName);
-            if (value != null && !value.isNull() && !value.asText().isBlank()) {
-                return true;
-            }
+            if (value != null && !value.isNull() && !value.asText().isBlank()) return true;
         }
         return false;
     }
